--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, macOS-latest]
+        os: [ubuntu-18.04, macOS-latest, windows-2019]
         python: [ '3.6', '3.7', '3.8', '3.9' ]
     name: Python ${{ matrix.python }} on ${{ matrix.os }}
     steps:
